--- a/style.css
+++ b/style.css
@@ -152,3 +152,20 @@ i {
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
+.final-score {
+  position: absolute;
+  left:50%;
+  transform: translateX(-50%);
+  color: #555;
+  font-size: 18px;
+  top:520px;
+  font-family: 'lato';
+  padding: 10px;
+  text-align: center;
+  width: 160px;
+  text-transform: uppercase;
+
+}
+.final-score:focus {
+    outline: none;
+}
